--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ SQLAlchemy-serializer==1.4.1
 datadog-api-client==2.13.2
 JSON-log-formatter==0.5.1
 python-dotenv==0.20.0
-tweety-ns==0.9.9.5
+tweety-ns==1.0.2
+requests==2.31.0
